--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
